added check theme

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <!-- В этот список рендери разметку меню -->
-    <ul class="menu js-menu"></ul>
+    <ul class="menu js-menu" id="menu"></ul>
     <script src="./index.js"></script>
   </body>
 </html>
